<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_difficulte"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.combo.demineur.DifficulteActivity">

    <TextView
        android:text="@string/difficulte_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:id="@+id/difficulte_title_TextView"
        style="@style/TitleText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/difficulte_choix_RadioGroup"
        android:id="@+id/difficulte_next_Button"
        android:onClick="pageSuivante"
        android:layout_alignRight="@+id/difficulte_choix_RadioGroup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulte_choix_RadioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:id="@+id/difficulte_indicateur_TextView"
        style="@style/ContentText"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/difficulte_choix_RadioGroup"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/difficulte_facile_RadioButton"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/difficulte_moyen_RadioButton" />

        <RadioButton
            android:text="@string/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/difficulte_difficile_RadioButton"
            android:layout_weight="1" />
    </RadioGroup>
</RelativeLayout>